--- a/src/styles/bootstrap.override.scss
+++ b/src/styles/bootstrap.override.scss
@@ -31,7 +31,9 @@ $theme-colors: (
   text-overflow: ellipsis;
   overflow: hidden;
 }
-
+.mw-50{
+  max-width: 50%;
+}
 .card {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border: 0;
