--- a/src/styles/bootstrap.override.scss
+++ b/src/styles/bootstrap.override.scss
@@ -4,39 +4,47 @@
 @import '~bootstrap/scss/variables';
 
 $theme-colors: (
-  primary: $black,
-  secondary: $secondary,
+        primary: $black,
+        secondary: $secondary,
 );
 
 @import '~bootstrap/scss/bootstrap';
 
-.br-16{
+.br-16 {
   border-radius: 16px !important;
 }
 
 
-.btn-primary{
+.btn-primary {
   background-color: $black !important;
 }
 
-.w-fit{
+.w-fit {
   width: fit-content;
 }
 
-.flex-1{
+.flex-1 {
   flex: 1 1
 }
 
-.ellipsis{
+.ellipsis {
   text-overflow: ellipsis;
   overflow: hidden;
 }
-.mw-50{
+
+.mw-50 {
   max-width: 50%;
 }
-.card {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border: 0;
+
+.card-contained {
+  background-color: #F4F5F6;
+  min-height: 142px;
+  min-width: 327px;
+  display: flex;
+  box-shadow: none;
+  border: none;
+  border-radius: 20px;
+  padding: 14px 20px;
 }
 
 
