add first mobile

--- a/src/components/NewSkills/index.scss
+++ b/src/components/NewSkills/index.scss
@@ -1,9 +1,27 @@
+@import "assets/styles/media";
+
 .NewSkills{
+  flex-wrap: nowrap;
+  @include Media(Mobile) {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+
+  &__caption{
+    width: 50%;
+    @include Media(Mobile) {
+      width: 100%;
+      justify-content: center;
+      align-content: center;
+      text-align: center;
+    }
+  }
   .grid{
     display: grid;
     grid-gap: 20px;
     grid-template-columns: 1fr 1fr;
-    @media only screen and (max-width: 1199px) {
+    @include Media(Mobile) {
       grid-template-columns: 1fr;
     }
   }
