--- a/src/components/Profile/index.scss
+++ b/src/components/Profile/index.scss
@@ -21,6 +21,14 @@
     @include Media(Mobile){
       flex-direction: column;
       max-width: 100%;
+      margin-top: 30px;
+      .MuiChip-root{
+        height: auto;
+      }
+      *{
+        white-space: normal !important;
+        text-align: left;
+      }
     }
   }
 }
