--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -11,5 +11,13 @@ header {
 :root{
   .inversion{
     background-color: black;
+    margin-top: -64px;
+    a{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
