--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,3 +1,5 @@
+@import "$media";
+
 header {
   height: 100px;
   width: 100%;
@@ -11,13 +13,16 @@ header {
 :root{
   .inversion{
     background-color: black;
-    margin-top: -64px;
-    a{
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    @include Media(Mobile){
+      margin-top: -64px;
+      a{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
+
   }
 }
