--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -1,9 +1,29 @@
+@import "$colors";
+@import "$media";
+
 .banner {
-  height: 440px;
   background-image: url("../../assets/images/banner-background.png");
   background-position:center;
   background-repeat: no-repeat;
   background-size: 110%;
   border-radius: 50px;
-  padding: 50px !important;
+  padding: 50px;
+  padding-right: 50px;
+  padding-left: 50px;
+  gap: 16px;
+  align-items: start;
+  header {
+    padding-top: -50px;
+  }
+  @include Media(Mobile){
+    width: 100%;
+    gap: 32px;
+    background-image: url("../../assets/images/banner.mobile.png");
+    align-items: center;
+    text-align: center;
+    background-size: cover;
+    border-radius: 0;
+    height: 100vh;
+    padding: 8px;
+  }
 }
