--- a/src/components/Profile/index.scss
+++ b/src/components/Profile/index.scss
@@ -24,6 +24,7 @@
       margin-top: 30px;
       .MuiChip-root{
         height: auto;
+        justify-content: start;
       }
       *{
         white-space: normal !important;
